stop videos after joining a session

--- a/web/index.html
+++ b/web/index.html
@@ -101,7 +101,7 @@
                         <img src="images/conditions.png">
                     </div>
                     <div class="media">
-                        <video src="videos/tokens.mp4" muted autoplay loop></video>
+                        <video src="videos/tokens.mp4" muted autoplay loop disablePictureInPicture></video>
                     </div>
                 </div>
                 <div style="flex-direction: row-reverse;">
@@ -113,7 +113,7 @@
                             player by their game-assigned color.</p>
                     </div>
                     <div class="media">
-                        <video src="videos/aoe.mp4" muted autoplay loop></video>
+                        <video src="videos/aoe.mp4" muted autoplay loop disablePictureInPicture></video>
                     </div>
                 </div>
                 <div>
@@ -130,7 +130,7 @@
                         </p>
                     </div>
                     <div class="media">
-                        <video src="videos/fow.mp4" muted autoplay loop></video>
+                        <video src="videos/fow.mp4" muted autoplay loop disablePictureInPicture></video>
                     </div>
                 </div>
                 <div style="flex-direction: row-reverse;">
@@ -147,7 +147,7 @@
                         </p>
                     </div>
                     <div class="media">
-                        <video src="videos/map.mp4" muted autoplay loop></video>
+                        <video src="videos/map.mp4" muted autoplay loop disablePictureInPicture></video>
                     </div>
                 </div>
             </div>
