collapsible token palette

--- a/web/index.html
+++ b/web/index.html
@@ -275,6 +275,9 @@
                 <div id="rightControls" class="dm no-edit">
                     <div id="prefabPalette" class="controls panel panning-only">
                         <h3>Token Palette</h3>
+                        <button id="paletteCollapse" class="icon close">
+                            <i class="fas fa-chevron-up"></i>
+                        </button>
                         <div class="prefab-selection">
                             <p>Players</p>
                             <div id="pcPrefabs" class="prefab-container"></div>
