restructured privacy policy

--- a/web/privacy.html
+++ b/web/privacy.html
@@ -29,23 +29,6 @@
             and how we process this data. With regard to the terminology used, e.g. "personal data" or its "processing",
             we refer to the definitions in Article 4 of the General Data Protection Regulation (GDPR).
         </p>
-
-        <h3>Name and address of the data controller</h3>
-        <p>
-            The responsible party within the meaning of the GDPR and other national data protection laws as well as
-            other data protection regulations is:
-        </p>
-        <p>
-            Theo Wiese<br>
-            Postnumber 1019768467<br>
-            PO Box 105<br>
-            72072 Tübingen<br>
-            <br>
-            E-mail: <a href="mailto:theoretically.online@gmail.com">theoretically.online@gmail.com</a><br>
-            <br>
-            <i>General information on data processing</i>
-        </p>
-
         <h3>What data do we collect from you?</h3>
         <ul>
             <li>Inventory data (e.g., names, nicknames)</li>
@@ -242,6 +225,19 @@
             We reserve the right to change, update or amend this privacy policy at any time. Any revised privacy policy
             will only apply to personal information collected or modified after the effective date of the revised
             privacy policy.
+        </p>
+
+        <h3>Name and address of the data controller</h3>
+        <p>
+            The responsible party within the meaning of the GDPR and other national data protection laws as well as
+            other data protection regulations is:
+        </p>
+        <p>
+            Theo Wiese<br>
+            PO Box 26 04<br>
+            72016 Tübingen<br>
+            <br>
+            E-mail: <a href="mailto:theoretically.online@gmail.com">theoretically.online@gmail.com</a><br>
         </p>
 
         <h3>Contact</h3>
