--- a/web/index.html
+++ b/web/index.html
@@ -489,6 +489,58 @@
 				<div id="online"></div>
 			</div>
 			<div id="log">
+				<div id="ambience">
+					<button class="icon">
+						Audioplayer
+						<i class="fas fa-music"></i>
+					</button>
+					<div class="content">
+						<div id="player">
+							<p><b>Sounds of Cannonballs In The Wall, In The Morning</b></p>
+							<p>İlker Yalçıner</p>
+							<button class="icon">
+								<i class="fas fa-forward"></i>
+							</button>
+						</div>
+						<div>
+							<span>
+								<i class="fas fa-music"></i>
+								<input id="vMusic" type="range" min="0" max="1" value="0.8" step="0.01">
+							</span>
+							<span>
+								<i class="fas fa-volume-down"></i>
+								<input id="vAmbience" type="range" min="0" max="1" value="0.8" step="0.01">
+							</span>
+
+							<div id="playlists">
+								<button class="icon toggle" value="tavern">
+									Tavern
+									<i class="fas fa-beer"></i>
+								</button>
+								<button class="icon toggle" value="overworld">
+									Overworld
+									<i class="fas fa-hiking"></i>
+								</button>
+								<button class="icon toggle" value="calm">
+									Dreamy
+									<i class="fas fa-bed"></i>
+								</button>
+								<button class="icon toggle" value="dungeon">
+									Dungeon
+									<i class="fas fa-dungeon"></i>
+								</button>
+								<button class="icon toggle" value="combat">
+									Combat
+									<i class="fas fa-fist-raised"></i>
+								</button>
+								<button class="icon toggle" value="sorrow">
+									Sorrow
+									<i class="fas fa-heart-broken"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div id="messages"></div>
 				<div id="chat">
 					<textarea cols="30" rows="10" maxlength="3000" placeholder="Chat with other players..."></textarea>
