implemented audio player playlists

--- a/web/index.html
+++ b/web/index.html
@@ -498,7 +498,7 @@
 						<div id="player">
 							<p><b>Sounds of Cannonballs In The Wall, In The Morning</b></p>
 							<p>İlker Yalçıner</p>
-							<button class="icon">
+							<button id="audioSkip" class="icon">
 								<i class="fas fa-forward"></i>
 							</button>
 						</div>
@@ -513,27 +513,27 @@
 							</span>
 
 							<div id="playlists">
-								<button class="icon toggle" value="tavern">
+								<button class="icon toggle" value="Tavern">
 									Tavern
 									<i class="fas fa-beer"></i>
 								</button>
-								<button class="icon toggle" value="overworld">
+								<button class="icon toggle" value="Overworld">
 									Overworld
 									<i class="fas fa-hiking"></i>
 								</button>
-								<button class="icon toggle" value="calm">
+								<button class="icon toggle" value="Calm">
 									Dreamy
 									<i class="fas fa-bed"></i>
 								</button>
-								<button class="icon toggle" value="dungeon">
+								<button class="icon toggle" value="Dungeon">
 									Dungeon
 									<i class="fas fa-dungeon"></i>
 								</button>
-								<button class="icon toggle" value="combat">
+								<button class="icon toggle" value="Combat">
 									Combat
 									<i class="fas fa-fist-raised"></i>
 								</button>
-								<button class="icon toggle" value="sorrow">
+								<button class="icon toggle" value="Sorrow">
 									Sorrow
 									<i class="fas fa-heart-broken"></i>
 								</button>
