--- a/web/index.html
+++ b/web/index.html
@@ -489,16 +489,18 @@
 				<div id="online"></div>
 			</div>
 			<div id="log">
-				<div id="ambience">
+				<div id="ambience" class="keep-open">
 					<button class="icon">
 						Audioplayer
 						<i class="fas fa-music"></i>
+						<i id="pinPlayer" class="fas fa-thumbtack"></i>
 					</button>
 					<div class="content">
 						<div id="player">
+							<div></div>
 							<p><b>Sounds of Cannonballs In The Wall, In The Morning</b></p>
 							<p>İlker Yalçıner</p>
-							<button id="audioSkip" class="icon">
+							<button id="audioSkip" class="icon dm">
 								<i class="fas fa-forward"></i>
 							</button>
 						</div>
@@ -512,7 +514,7 @@
 								<input id="vAmbience" type="range" min="0" max="1" value="0.8" step="0.01">
 							</span>
 
-							<div id="playlists">
+							<div id="playlists" class="dm">
 								<button class="icon toggle" value="Tavern">
 									Tavern
 									<i class="fas fa-beer"></i>
@@ -522,7 +524,7 @@
 									<i class="fas fa-hiking"></i>
 								</button>
 								<button class="icon toggle" value="Calm">
-									Dreamy
+									Ethereal
 									<i class="fas fa-bed"></i>
 								</button>
 								<button class="icon toggle" value="Dungeon">
