better audioplayer track appearance

--- a/web/index.html
+++ b/web/index.html
@@ -489,21 +489,13 @@
 				<div id="online"></div>
 			</div>
 			<div id="log">
-				<div id="ambience" class="keep-open">
+				<div id="ambience">
 					<button class="icon">
 						Audioplayer
 						<i class="fas fa-music"></i>
 						<i id="pinPlayer" class="fas fa-thumbtack"></i>
 					</button>
 					<div class="content">
-						<div id="player">
-							<div></div>
-							<p><b>Sounds of Cannonballs In The Wall, In The Morning</b></p>
-							<p>İlker Yalçıner</p>
-							<button id="audioSkip" class="icon dm">
-								<i class="fas fa-forward"></i>
-							</button>
-						</div>
 						<div>
 							<span>
 								<i class="fas fa-music"></i>
@@ -540,6 +532,14 @@
 									<i class="fas fa-heart-broken"></i>
 								</button>
 							</div>
+						</div>
+						<div id="player">
+							<a target="_blank" rel="noopener noreferrer">Sounds of Cannonballs In The Wall, In The
+								Morning</a>
+							<p>İlker Yalçıner</p>
+							<button id="audioSkip" class="icon dm">
+								<i class="fas fa-forward"></i>
+							</button>
 						</div>
 					</div>
 				</div>
