--- a/web/index.html
+++ b/web/index.html
@@ -499,11 +499,15 @@
 						<div>
 							<span>
 								<i class="fas fa-music"></i>
-								<input id="vMusic" type="range" min="0" max="1" value="0.8" step="0.01">
+								<input id="vMusic" type="range" min="0" max="1" value="0.8" step="0.005">
 							</span>
 							<span>
 								<i class="fas fa-volume-down"></i>
-								<input id="vAmbience" type="range" min="0" max="1" value="0.8" step="0.01">
+								<input id="vAmbience" type="range" min="0" max="1" value="0.8" step="0.005">
+							</span>
+							<span class="dm">
+								<i class="fas fa-cloud-rain"></i>
+								<input id="weather" type="range" min="-1" max="2" value="-1">
 							</span>
 
 							<div id="playlists" class="dm">
