--- a/web/index.html
+++ b/web/index.html
@@ -505,10 +505,6 @@
 								<i class="fas fa-volume-down"></i>
 								<input id="vAmbience" type="range" min="0" max="1" value="0.8" step="0.005">
 							</span>
-							<span class="dm">
-								<i class="fas fa-cloud-rain"></i>
-								<input id="weather" type="range" min="-1" max="2" value="-1">
-							</span>
 
 							<div id="playlists" class="dm">
 								<button class="icon toggle" value="Tavern">
@@ -536,6 +532,25 @@
 									<i class="fas fa-heart-broken"></i>
 								</button>
 							</div>
+
+							<span class="dm with-tooltip">
+								<i class="fas fa-sun"></i>
+								<input id="weather" type="range" min="-1" max="1" value="-1">
+								<i class="fas fa-cloud-showers-heavy"></i>
+								<span>Weather: Clear</span>
+							</span>
+							<span class="dm with-tooltip">
+								<i class="fas fa-door-open"></i>
+								<input id="weatherFilter" type="range" min="0" max="1" value="0" step="0.005">
+								<i class="fas fa-door-closed"></i>
+								<span>Outside/Inside</span>
+							</span>
+							<span class="dm with-tooltip">
+								<i class="fas fa-user"></i>
+								<input id="crowd" type="range" min="-1" max="1" value="-1">
+								<i class="fas fa-users"></i>
+								<span>Crowd: Tavern</span>
+							</span>
 						</div>
 						<div id="player">
 							<a target="_blank" rel="noopener noreferrer">Sounds of Cannonballs In The Wall, In The
