handle empty audio tracklist

--- a/web/index.html
+++ b/web/index.html
@@ -553,9 +553,8 @@
 							</span>
 						</div>
 						<div id="player">
-							<a target="_blank" rel="noopener noreferrer">Sounds of Cannonballs In The Wall, In The
-								Morning</a>
-							<p>İlker Yalçıner</p>
+							<a class="transition" target="_blank" rel="noopener noreferrer">#</a>
+							<p class="transition">#</p>
 							<button id="audioSkip" class="icon dm">
 								<i class="fas fa-forward"></i>
 							</button>
