introduced token invisible property

--- a/web/index.html
+++ b/web/index.html
@@ -319,6 +319,9 @@
 						<span>Aura Radius:
 							<input id="movableAura" type="number" min="0" max="25" placeholder="Radius...">
 						</span>
+						<span>Invisible:
+							<input id="movableInvisible" type="checkbox">
+						</span>
 						<span class="space-between">
 							Conditions
 							<a>Clear all</a>
