made visibility checkbox into a toggle button

--- a/web/index.html
+++ b/web/index.html
@@ -319,15 +319,15 @@
 						<span>Aura Radius:
 							<input id="movableAura" type="number" min="0" max="25" placeholder="Radius...">
 						</span>
-						<span>Invisible:
-							<input id="movableInvisible" type="checkbox">
-						</span>
 						<span class="space-between">
 							Conditions
 							<a>Clear all</a>
 						</span>
 						<div id="conds"></div>
-						<button id="movableRemove" class="bad compact">Remove From Scene</button>
+						<span class="space-between">
+							<button id="movableInvisible" class="big compact toggle">Invisible</button>
+							<button id="movableRemove" class="bad compact">Remove From Scene</button>
+						</span>
 					</div>
 				</div>
 				<div id="sceneSelector" class="controls panel dm hooked no-edit panning-only">
