introduced asset picker

--- a/web/index.html
+++ b/web/index.html
@@ -708,7 +708,7 @@
 
 		<div id="imagePrePick">
 			<button class="icon">Pick from Assets
-				<i class="fas fa-user"></i>
+				<i class="fas fa-image"></i>
 			</button>
 			<button class="icon">Upload Image
 				<i class="fas fa-upload"></i>
@@ -720,16 +720,11 @@
 			<button class="close">
 				<i class="fas fa-times"></i>
 			</button>
-
-			<div id="assetGrid">
-				<img src="images/icons/delapouite/archer.svg">
-				<img src="images/icons/delapouite/archer.svg">
-				<img src="images/icons/delapouite/archer.svg">
-				<img src="images/icons/delapouite/archer.svg">
-				<img src="images/icons/delapouite/archer.svg">
-				<img src="images/icons/delapouite/archer.svg">
-				<img src="images/icons/delapouite/archer.svg">
-			</div>
+			<div id="assetGrid"></div>
+			<p>Provided by <a href="https://2minutetabletop.com/" target="_blank" rel="noopener noreferrer">2-Minute
+					Tabletop</a> (licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/"
+					target="_blank" rel="noopener noreferrer">Creative Commons</a>)
+			</p>
 		</div>
 
 		<div id="charPick" class="panel">
