prevent multiple connections to one account

--- a/web/index.html
+++ b/web/index.html
@@ -65,14 +65,14 @@
 						</span>
 						<input type="password" autocomplete="current-password" id="loginPassword">
 					</div>
-					<div id="rememberMe">
+					<span id="rememberMe">
 						<label class="with-tooltip">
 							<input type="checkbox">
 							Remember me
 							<span>Save a cookie on your machine to stay logged in.</span>
 						</label>
-					</div>
-					<p id="loginError" class="bad"></p>
+						<p id="loginError" class="bad"></p>
+					</span>
 					<button id="login" class="big">Log In</button>
 				</form>
 				<span>
