added paypal link

--- a/web/index.html
+++ b/web/index.html
@@ -170,15 +170,20 @@
 					</a>
 				</div>
 				<div style="justify-content: flex-end">
-					<a href="https://ko-fi.com/doodlezucc" class="icon with-tooltip" target="_blank"
-						rel="noopener noreferrer">
-						<i class="fas fa-coffee"></i>
-						<span>Donate on Ko-fi</span>
-					</a>
 					<a href="https://github.com/doodlezucc" class="icon with-tooltip" target="_blank"
 						rel="noopener noreferrer">
 						<i class="fab fa-github"></i>
 						<span>More Code on Github</span>
+					</a>
+					<a href="https://www.paypal.com/paypalme/theowiese" class="icon with-tooltip" target="_blank"
+						rel="noopener noreferrer">
+						<i class="fab fa-paypal"></i>
+						<span>Donate on PayPal</span>
+					</a>
+					<a href="https://ko-fi.com/doodlezucc" class="icon with-tooltip" target="_blank"
+						rel="noopener noreferrer">
+						<i class="fas fa-coffee"></i>
+						<span>Donate on Ko-fi</span>
 					</a>
 					<a href="mailto:theoretically.online@gmail.com" class="icon with-tooltip" target="_blank"
 						rel="noopener noreferrer">
