fixed drag & drop for image URLs

--- a/web/index.html
+++ b/web/index.html
@@ -698,7 +698,7 @@
 				</div>
 
 				<canvas></canvas>
-				<img>
+				<img crossorigin="anonymous">
 				<span id="dragText">Drag & Drop File Here</span>
 			</div>
 
