added "drag & drop" option for image picking

--- a/web/index.html
+++ b/web/index.html
@@ -718,6 +718,9 @@
 			<button class="icon">Upload Image
 				<i class="fas fa-upload"></i>
 			</button>
+			<button class="icon">Drag & Drop
+				<i class="fas fa-hand-pointer"></i>
+			</button>
 		</div>
 
 		<div class="panel" id="assetPanel">
