map toggle button to allow players to draw

--- a/web/index.html
+++ b/web/index.html
@@ -472,14 +472,19 @@
 							</button>
 						</div>
 
-						<span id="toolInfo" title="Click to collapse info"></span>
+						<span id="toolInfo" class="single-item" title="Click to collapse info"></span>
 
-						<button class="icon" id="infoShow">
+						<button class="icon single-item" id="infoShow">
 							<i class="fas fa-question-circle"></i>
 							<span>Show Tool Info</span>
 						</button>
 
 						<input type="color" id="activeColor">
+
+						<button class="dm icon single-item" id="mapShared">
+							<i class="fas fa-user-edit"></i>
+							<span>Allow Players to Draw</span>
+						</button>
 					</div>
 					<button class="icon" type="reset">
 						Exit Map View
