save initiative order on server

--- a/web/index.html
+++ b/web/index.html
@@ -96,7 +96,7 @@
 						<h2>Token Managing</h2>
 						<p>Set up your own <b>palette of tokens</b>. Every added token has a customizable default
 							size and list of owners.</p>
-						<p>Drag tokens into the scene to move and <b>fintune them individually</b>. A set of condition
+						<p>Drag tokens into the scene to move and <b>finetune them individually</b>. A set of condition
 							icons can be applied to keep track of a creature's state.</p>
 						<img src="images/conditions.png">
 					</div>
