renamed the whole thing

--- a/mail/activate.html
+++ b/mail/activate.html
@@ -8,7 +8,7 @@
 							bgcolor="#ffffff">
 							<tr>
 								<td align="center" style="padding-top: 16px">
-									<img alt="D&D Interactive" src="cid:logo">
+									<img alt="Dungeon Club" src="cid:logo">
 								</td>
 							</tr>
 							<tr>
@@ -21,7 +21,7 @@
 							</tr>
 							<tr>
 								<td style="padding: 20px 0 0 0;">
-									Your <b>D&D Interactive</b> account is on its way to existence!
+									Your <b>Dungeon Club</b> account is on its way to existence!
 									To activate it, please enter this code on the website:
 								</td>
 							</tr>
