--- a/mail/reset.html
+++ b/mail/reset.html
@@ -8,7 +8,7 @@
 							bgcolor="#ffffff">
 							<tr>
 								<td align="center" style="padding-top: 16px;">
-									<img alt="D&D Interactive" src="cid:logo">
+									<img alt="Dungeon Club" src="cid:logo">
 								</td>
 							</tr>
 							<tr>
@@ -21,7 +21,7 @@
 							</tr>
 							<tr>
 								<td style="padding: 20px 0 0 0;">
-									It seems like you forgot the password to your <b>D&D Interactive</b> account.
+									It seems like you forgot the password to your <b>Dungeon Club</b> account.
 									To reset it, please enter this code on the website:
 								</td>
 							</tr>
