--- a/web/index.html
+++ b/web/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<meta property="og:title" content="D&D Interactive" />
-	<meta property="twitter:title" content="D&D Interactive" />
+	<meta property="og:title" content="Dungeon Club" />
+	<meta property="twitter:title" content="Dungeon Club" />
 
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="https://theoretically.online/dnd/images/banner.jpg" />
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="shortcut icon" type="image/png" sizes="128x128" href="images/icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="images/icon32.png">
-	<title>D&D Interactive</title>
+	<title>Dungeon Club</title>
 	<script defer src="main.dart.js"></script>
 	<script src="https://kit.fontawesome.com/a3de05bb60.js" crossorigin="anonymous"></script>
 </head>
@@ -31,7 +31,7 @@
 	<header>
 		<a href="/" class="title">
 			<div><img src="images/icon.png"></div>
-			<h1>D&D Interactive</h1>
+			<h1>Dungeon Club</h1>
 		</a>
 
 		<span>
@@ -46,7 +46,7 @@
 			<span id="loginText">You're now logged in!</span>
 
 			<div id="loginTab" class="hidden">
-				<h1>Sign in to D&D Interactive</h1>
+				<h1>Sign in to Dungeon Club</h1>
 
 				<p>
 					An account gives you the possibility to create and lead your own campaigns.
@@ -599,7 +599,7 @@
 				You're invited to join this session! Enter your name so the Dungeon Master can assign you the right
 				character.
 				<br><br>
-				(This name will be forwarded to the DM and is not saved anywhere but your machine.)
+				(This name will be forwarded to the GM and is not saved anywhere but your machine.)
 			</p>
 
 			<div>
@@ -744,8 +744,7 @@
 					<table>
 						<tr>
 							<td>Email address</td>
-							<td><input type="email" class="email" autocomplete="email"
-									placeholder="e.g. sweetlilly93@hotmail.com..."></td>
+							<td><input type="email" class="email" autocomplete="email" placeholder="Email..."></td>
 						</tr>
 						<tr>
 							<td colspan="2">
@@ -807,8 +806,7 @@
 					<table>
 						<tr>
 							<td>Email address</td>
-							<td><input type="email" class="email" autocomplete="email"
-									placeholder="e.g. sweetlilly93@hotmail.com..."></td>
+							<td><input type="email" class="email" autocomplete="email" placeholder="Email..."></td>
 						</tr>
 						<tr>
 							<td colspan="2">
