--- a/web/privacy.html
+++ b/web/privacy.html
@@ -16,14 +16,14 @@
 	<header>
 		<a href="/dnd" class="title">
 			<div><img src="images/icon.png"></div>
-			<h1>D&D Interactive</h1>
+			<h1>Dungeon Club</h1>
 		</a>
 	</header>
 
 	<div>
 		<h1>Privacy Policy</h1>
 		<p>
-			D&D Interactive takes data protection seriously and respects your privacy. In this privacy policy, we
+			Dungeon Club takes data protection seriously and respects your privacy. In this privacy policy, we
 			provide information about what data we collect as part of our Internet offer at
 			<a href="https://theoretically.online/dnd">theoretically.online/dnd</a>
 			and how we process this data. With regard to the terminology used, e.g. "personal data" or its "processing",
@@ -42,13 +42,13 @@
 		<h3>Categories of persons affected by the processing:</h3>
 		<ul>
 			<li>Customers / interested parties</li>
-			<li>Visitors and users of D&D Interactive</li>
+			<li>Visitors and users of Dungeon Club</li>
 		</ul>
 		<p>In this privacy policy, we also refer to all data subjects collectively as "users".</p>
 
 		<h3>What do we use your data for?</h3>
 		<ul>
-			<li>Provision of D&D Interactive, its contents and functions</li>
+			<li>Provision of Dungeon Club, its contents and functions</li>
 			<li>Provision of services</li>
 			<li>Answering enquiries and communicating with users</li>
 			<li>Marketing and market research</li>
@@ -100,7 +100,7 @@
 		<p>
 			If you consent or ask us to, we will share your information (campaign invite, name, nickname, email address,
 			profile picture) as described at the time of consent with the user you are inviting to participate in your
-			D&D Interactive campaign.
+			Dungeon Club campaign.
 		</p>
 		<p>
 			Likewise, when you message other users during your Campaign as a part of the Campaign you are playing and
@@ -174,11 +174,11 @@
 
 		<h3>Messages and Profile Data</h3>
 		<p>
-			Within D&D Interactive you may be able to display certain profile information, share certain details, engage
+			Within Dungeon Club you may be able to display certain profile information, share certain details, engage
 			with others, exchange knowledge and insights, messages and view relevant content. Content and data is not
 			publicly viewable. You have choices about the information on your profile. You don’t have to provide
 			additional information on your profile or in your message; however, some information helps you to get more
-			from your game. It’s your choice whether to include sensitive information on your profile or in your message
+			from your game. It's your choice whether to include sensitive information on your profile or in your message
 			and to make that information public. Please do not post, share or disclose or add personal data to your
 			profile or in your message that you would not want to be available. The legal basis for the storage is
 			Article 6 lit. f) GDPR.
@@ -214,7 +214,7 @@
 
 		<h3>Protection of minors</h3>
 		<p>
-			D&D Interactive and our services are intended exclusively for adults. We do not knowingly collect
+			Dungeon Club and our services are intended exclusively for adults. We do not knowingly collect
 			age-identifying information, nor do we knowingly collect personal information from children under the age of
 			13. We remind all users under the age of 13 not to disclose or provide any personally identifiable
 			information through our service.
