replaced "Dungeon Master" with "Game Master"

--- a/web/index.html
+++ b/web/index.html
@@ -596,7 +596,7 @@
 			</button>
 
 			<p>
-				You're invited to join this session! Enter your name so the Dungeon Master can assign you the right
+				You're invited to join this session! Enter your name so the Game Master can assign you the right
 				character.
 				<br><br>
 				(This name will be forwarded to the GM and is not saved anywhere but your machine.)
