--- a/web/privacy.html
+++ b/web/privacy.html
@@ -108,7 +108,7 @@
 			any other information you submit and they agree to share.
 		</p>
 		<p>
-			If you, as a Dungeon Master, invite another user to assist you, you authorise that person to access and if
+			If you, as a Game Master, invite another user to assist you, you authorise that person to access and if
 			necessary, update your information and content, including but not limited to certain information such as
 			your name, nick name, and messages.
 		</p>
