display audio player feature on home page

--- a/web/index.html
+++ b/web/index.html
@@ -109,7 +109,10 @@
 					<div class="info">
 						<h2>Area of Effect</h2>
 						<p>Visualize your <b>spellcasting area</b> in whatever shape you need. Areas are calculated in
-							the most common way and generally follow the DMG.</p>
+							the most common way and generally follow the
+							<a href="https://dnd.wizards.com/products/dungeon-masters-guide" target="_blank"
+								rel="noopener noreferrer">Dungeon Master's Guide</a>.
+						</p>
 						<p>All measurements are <b>shared live with other campaign members</b>. You can identify the
 							player by their game-assigned color.</p>
 					</div>
@@ -119,6 +122,28 @@
 					</div>
 				</div>
 				<div>
+					<div class="info">
+						<h2>Audio Player</h2>
+						<p>Dungeon Club features an integrated sound panel for game masters. Choose from <b>6 different
+								playlists</b>, as well as a number of <b>ambient soundscapes</b> to create immersive
+							atmospheres.
+						</p>
+						<p>All playlists are curated collections of songs composed by
+							<a href="https://vindsvept.se/" target="_blank" rel="noopener noreferrer">Vindsvept</a>,<br>
+							<a href="https://www.scottbuckley.com.au/" target="_blank" rel="noopener noreferrer">Scott
+								Buckley</a> as well as
+							<a href="https://incompetech.com/" target="_blank" rel="noopener noreferrer">Kevin
+								MacLeod</a>
+							and more artists who made their work available under <b>Creative Commons</b> or
+							similar licenses.
+						</p>
+					</div>
+					<div class="media">
+						<video src="videos/audio.mp4" muted autoplay loop disablePictureInPicture
+							disableRemotePlayback></video>
+					</div>
+				</div>
+				<div style="flex-direction: row-reverse;">
 					<div class="info">
 						<h2>Fog of War</h2>
 						<p>When planning out a large dungeon, you may not want your players to know what evil creatures
@@ -136,7 +161,7 @@
 							disableRemotePlayback></video>
 					</div>
 				</div>
-				<div style="flex-direction: row-reverse;">
+				<div>
 					<div class="info">
 						<h2>Map View</h2>
 						<p>Show your players the paths they've traveled and <b>where they are currently heading</b> on a
