--- a/web/index.html
+++ b/web/index.html
@@ -663,15 +663,21 @@
 		<div class="panel" id="initiativePanel">
 			<span id="initiativeTarget"></span>
 			<span id="initiativeDice"></span>
-			<span>
-				<button id="initiativeRoll" class="icon">
-					Roll for Initiative
+			<div>
+				<span>
+					<button id="initiativeRoll" class="icon">
+						Roll for Initiative
+						<i class="fas fa-dice-d20"></i>
+					</button>
+					<button id="initiativeSkip" class="hidden">
+						Skip Creature
+					</button>
+				</span>
+				<button id="initiativeSkipType" class="icon hidden">
+					Skip All
 					<i class="fas fa-dice-d20"></i>
 				</button>
-				<button id="initiativeSkip" class="hidden">
-					Skip Creature
-				</button>
-			</span>
+			</div>
 		</div>
 
 		<div class="panel" id="editGamePanel">
