--- a/web/index.html
+++ b/web/index.html
@@ -735,17 +735,7 @@
 			</span>
 		</div>
 
-		<div id="imagePrePick">
-			<button class="icon">Pick from Assets
-				<i class="fas fa-image"></i>
-			</button>
-			<button class="icon">Upload Image
-				<i class="fas fa-upload"></i>
-			</button>
-			<button class="icon">Drag & Drop
-				<i class="fas fa-hand-pointer"></i>
-			</button>
-		</div>
+		<div id="contextMenu"></div>
 
 		<div class="panel" id="assetPanel">
 			<h2>Pick Asset</h2>
