option to roll initiatives for remaining tokens

--- a/web/index.html
+++ b/web/index.html
@@ -223,7 +223,12 @@
 		<section id="session">
 			<div id="boardContainer">
 				<div id="initiativeBar" class="controls panel hidden no-edit">
-					<div class="roster"></div>
+					<div class="roster">
+						<button id="initiativeReroll" class="icon dm with-tooltip">
+							<i class="fas fa-plus"></i>
+							<span>Roll Remaining Tokens</span>
+						</button>
+					</div>
 				</div>
 				<div id="playerControls" class="controls no-edit">
 					<button class="icon dm" id="editScene">
