better initiative tracker ux

--- a/web/index.html
+++ b/web/index.html
@@ -666,6 +666,9 @@
 		</div>
 
 		<div class="panel" id="initiativePanel">
+			<button class="close dm">
+				<i class="fas fa-times"></i>
+			</button>
 			<span id="initiativeTarget"></span>
 			<span id="initiativeDice"></span>
 			<div>
@@ -678,10 +681,7 @@
 						Skip Creature
 					</button>
 				</span>
-				<button id="initiativeSkipType" class="icon hidden">
-					Skip All
-					<i class="fas fa-dice-d20"></i>
-				</button>
+				<button id="initiativeSkipType" class="hidden"></button>
 			</div>
 		</div>
 
