moved selection action buttons to side of panel

--- a/web/index.html
+++ b/web/index.html
@@ -359,10 +359,16 @@
 							<a>Clear all</a>
 						</span>
 						<div id="conds"></div>
-						<span class="space-between">
-							<button id="movableInvisible" class="big compact toggle">Invisible</button>
-							<button id="movableRemove" class="bad compact">Remove From Scene</button>
-						</span>
+						<div class="left-col">
+							<button id="movableInvisible" class="icon with-tooltip toggle">
+								<i class="fas fa-eye"></i>
+								<span>Visible</span>
+							</button>
+							<button id="movableRemove" class="icon with-tooltip">
+								<i class="fas fa-trash"></i>
+								<span>Remove From Scene</span>
+							</button>
+						</div>
 					</div>
 				</div>
 				<div id="sceneSelector" class="controls panel dm hooked no-edit panning-only">
