option to keep measurements visible

--- a/web/index.html
+++ b/web/index.html
@@ -270,6 +270,11 @@
 									<span>Line</span>
 								</i>
 							</div>
+							<div class="toolbox" id="measureSettings">
+								<i class="fas fa-thumbtack toggle" id="measureSticky">
+									<span>Keep Visible</span>
+								</i>
+							</div>
 						</div>
 					</button>
 					<button class="icon" id="openMap">
