option to hide measurements from other players

--- a/web/index.html
+++ b/web/index.html
@@ -271,8 +271,9 @@
 								</i>
 							</div>
 							<div class="toolbox" id="measureSettings">
-								<i class="fas fa-thumbtack toggle" id="measureSticky">
-									<span>Keep Visible</span>
+								<i id="measureVisible"><span></span></i>
+								<i class="fas fa-thumbtack" id="measureSticky">
+									<span>Sticky</span>
 								</i>
 							</div>
 						</div>
